Update mago3d-user