@@ -1,7 +1,7 @@
 package gaia3d.controller.rest;
 
-import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
@@ -11,41 +11,49 @@ import javax.servlet.http.HttpServletRequest;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
-import org.springframework.web.bind.annotation.CrossOrigin;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 
-import lombok.extern.slf4j.Slf4j;
-import gaia3d.domain.District;
-import gaia3d.domain.Pagination;
-import gaia3d.domain.SkEmd;
-import gaia3d.domain.SkSdo;
-import gaia3d.domain.SkSgg;
+import gaia3d.domain.Key;
+import gaia3d.domain.common.Pagination;
+import gaia3d.domain.country.District;
+import gaia3d.domain.country.SkEmd;
+import gaia3d.domain.country.SkSdo;
+import gaia3d.domain.country.SkSgg;
 import gaia3d.service.SearchMapService;
+import lombok.extern.slf4j.Slf4j;
 
 @Slf4j
 @RequestMapping("/searchmap")
-@CrossOrigin(origins = "*")
 @RestController
 public class SearchMapRestController {
 
 	@Autowired
 	private SearchMapService searchMapService;
 
+	/*HttpServletRequest request;
+	String lang = (String)request.getSession().getAttribute(Key.LANG.name());*/
+
 	/**
 	 * 시도 목록
 	 * @return
 	 */
 	@GetMapping("/sdos")
-	public Map<String, Object> getListSdo() {
+	public Map<String, Object> getListSdo(HttpServletRequest request) {
 		Map<String, Object> result = new HashMap<>();
 		String errorCode = null;
 		String message = null;
-		
-		List<SkSdo> sdoList = searchMapService.getListSdoExceptGeom();
+		District district = new District();
+		String lang = (String)request.getSession().getAttribute(Key.LANG.name());
+		if(lang!=null) {
+			district.setKoname("enname");
+		}else {
+			district.setKoname("koname");
+		}
+		List<SkSdo> sdoList = searchMapService.getListSdoExceptGeom(district);
 		int statusCode = HttpStatus.OK.value();
 		
 		result.put("sdoList", sdoList);
@@ -61,12 +69,20 @@ public class SearchMapRestController {
 	 * @return
 	 */
 	@GetMapping("/sdos/{sdoCode:[0-9]+}/sggs")
-	public Map<String, Object> getListSggBySdo(@PathVariable String sdoCode) {
+	public Map<String, Object> getListSggBySdo(HttpServletRequest request, @PathVariable String sdoCode) {
 		Map<String, Object> result = new HashMap<>();
 		String errorCode = null;
 		String message = null;
+		District district = new District();
+		district.setSidoCd(sdoCode);
+	/*	String lang = (String)request.getSession().getAttribute(Key.LANG.name());
+		if(lang!=null) {
+			district.setName("enname");
+		}else {
+			district.setName("koname");
+		}*/
 		
-		List<SkSgg> sggList = searchMapService.getListSggBySdoExceptGeom(sdoCode);
+		List<SkSgg> sggList = searchMapService.getListSggBySdoExceptGeom(district);
 		int statusCode = HttpStatus.OK.value();
 		
 		result.put("sggList", sggList);
@@ -83,10 +99,12 @@ public class SearchMapRestController {
 	 * @return
 	 */
 	@GetMapping("/sdos/{sdoCode:[0-9]+}/sggs/{sggCode:[0-9]+}/emds")
-	public Map<String, Object> getListEmdBySdoAndSgg(@PathVariable String sdoCode, @PathVariable String sggCode) {
+	public Map<String, Object> getListEmdBySdoAndSgg(HttpServletRequest request, @PathVariable String sdoCode, @PathVariable String sggCode) {
 		Map<String, Object> result = new HashMap<>();
 		String errorCode = null;
 		String message = null;
+		
+		String lang = (String)request.getSession().getAttribute(Key.LANG.name());
 		
 		SkEmd mapEmd = new SkEmd();
 		mapEmd.setSdoCode(sdoCode);
@@ -121,14 +139,14 @@ public class SearchMapRestController {
 		if (skEmd.getLayerType() == 1) {
 			// 시도
 			SkSdo skSdo = new SkSdo();
-			skSdo.setName(skEmd.getName());
+			skSdo.setKoname(skEmd.getKoname());
 			skSdo.setBjcd(skEmd.getBjcd());
 			centerPoint = searchMapService.getCentroidSdo(skSdo);
 			log.info("@@@@ sdo center point {}", centerPoint);
 		} else if (skEmd.getLayerType() == 2) {
 			// 시군구
 			SkSgg skSgg = new SkSgg();
-			skSgg.setName(skEmd.getName());
+			skSgg.setKoname(skEmd.getKoname());
 			skSgg.setBjcd(skEmd.getBjcd());
 			centerPoint = searchMapService.getCentroidSgg(skSgg);
 			log.info("@@@@ sgg center point {}", centerPoint);
@@ -168,23 +186,29 @@ public class SearchMapRestController {
 		if (skEmd.getLayerType() == 1) {
 			// 시도
 			SkSdo skSdo = new SkSdo();
-			skSdo.setName(skEmd.getName());
+			skSdo.setKoname(skEmd.getKoname());
 			skSdo.setBjcd(skEmd.getBjcd());
+			System.out.println(skSdo.getBjcd());
 			bboxWkt = searchMapService.getEnvelopSdo(skSdo);
 			log.info("@@@@ sdo bbox {}", bboxWkt);
 		} else if (skEmd.getLayerType() == 2) {
 			// 시군구
 			SkSgg skSgg = new SkSgg();
-			skSgg.setName(skEmd.getName());
+			skSgg.setKoname(skEmd.getKoname());
 			skSgg.setBjcd(skEmd.getBjcd());
 			bboxWkt = searchMapService.getEnvelopSgg(skSgg);
 			log.info("@@@@ sgg bbox {}", bboxWkt);
 		} else if (skEmd.getLayerType() == 3) {
 			// 읍면동
+			System.out.println(skEmd.getBjcd());
 			bboxWkt = searchMapService.getEnvelopEmd(skEmd);
 			log.info("@@@@ emd bbox {}", bboxWkt);
 		}
 		
+		if (bboxWkt == null) {
+			bboxWkt = "POLYGON((124.609708885853 33.1137120723124,124.609708885853 38.6151323380178,131.872766214216 38.6151323380178,131.872766214216 33.1137120723124,124.609708885853 33.1137120723124))";
+		}
+
 		bboxWkt = bboxWkt.replace("POLYGON((", "");
 		bboxWkt = bboxWkt.replace("))", "");
 		
@@ -221,6 +245,13 @@ public class SearchMapRestController {
 		String errorCode = null;
 		String message = null;
 		
+		String lang = (String)request.getSession().getAttribute(Key.LANG.name());
+		if(lang!=null) {
+			district.setKoname("enname");
+		}else {
+			district.setKoname("koname");
+		}
+		
 		log.info("@@ district = {}", district);
 		district.setSearchValue(district.getFullTextSearch());
 		district.setSearchWord(district.getFullTextSearch());
@@ -245,12 +276,11 @@ public class SearchMapRestController {
 		district.setOffset(pagination.getOffset());
 		district.setLimit(pagination.getPageRows());
 		List<District> districtList = new ArrayList<>();
-		if (totalCount > 0l) {
+		if (totalCount > 0L) {
 			districtList = searchMapService.getListDistrict(district);
 		}
 
 		int statusCode = HttpStatus.OK.value();
-		
 		result.put("pagination", pagination);
 		result.put("totalCount", totalCount);
 		result.put("districtList", districtList);
@@ -261,14 +291,8 @@ public class SearchMapRestController {
 	}
 
 	private String getSearchParameters(String fullTextSearch) {
-		StringBuffer buffer = new StringBuffer();
-		buffer.append("&");
-		try {
-			buffer.append("searchValue=" + URLEncoder.encode(fullTextSearch, "UTF-8"));
-		} catch (UnsupportedEncodingException e) {
-			log.info("@@ objectMapper exception. message = {}", e.getCause() != null ? e.getCause().getMessage() : e.getMessage());
-			buffer.append("searchValue=");
-		}
-		return buffer.toString();
+		StringBuilder builder = new StringBuilder();
+		builder.append("&searchValue=" + URLEncoder.encode(fullTextSearch, StandardCharsets.UTF_8));
+		return builder.toString();
 	}
 }
